--- a/index.html
+++ b/index.html
@@ -7,62 +7,96 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Import The Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Import The CSS File -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Features
-  Team
-  Sign In
-
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
+  <nav>
+    <img src="images/logo.svg" alt="Logo">
+    <section>
+      Features
+      Team
+      Sign In
+    </section>
+  </nav>
+  <main>
+    <section>
+      <article>
+        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <p>
+        Fylo stores your most important files in one secure location. 
+        Access them wherever you need, share and collaborate with friends, 
+        family, and co-workers.
+        </p>
+        <input type="email" placeholder="Enter your email">
+        <button>Get Started</button>
+      </article>
+      <img src="images/illustration-1.svg" alt="">
+    </section>
+    <section>
+      <article>
+        <h1>Stay productive, wherever you are</h1>
+        <p>
+        Never let location be an issue when accessing your files. Fylo has you 
+        covered for all of your file storage needs.
+      
+        Securely share files and folders with friends, family and colleagues for 
+        live collaboration. No email attachments required!
+      
+        <span>See how Fylo works</span>
+        </p>
+        <article>
+          <img src="images/icon-quotes.svg" alt="">
+          <p>
+          Fylo has improved our team productivity by an order of magnitude. Since 
+          making the switch our team has become a well-oiled collaboration machine.
+          </p>
+          <section class="profile">
+          <img src="images/avatar-testimonial.jpg" alt=""><span> Kyle Burton </span><br> Founder & CEO, Huddle
+          </section>
+        </article>
+      </article>
+      <img src="images/illustration-2.svg" alt="">
+    </section>
+    <section>
+      <article>
+        <h1>Get early access today</h1>
+        <p>
+        It only takes a minute to sign up and our free starter tier is extremely generous. 
+        If you have any questions, our support team would be happy to help you.
+        </p>
+      </article>
+      <article>
+        <input type="email" placeholder="email@example.com">
+        <button>Get Started For Free</button>
+      </article>
+    </section>
+  </main>
+  <footer>
+    <img src="images/logo.svg" alt="">
+    <section>
+      <img src="images/icon-phone.svg" alt="">Phone: +1-543-123-4567
+      <img src="images/icon-email.svg" alt="">example@fylo.com
+    </section>
+    <section>
+      About Us
+      Jobs
+      Press
+      Blog
+    </section>
+    <section>
+      Contact Us
+      Terms
+      Privacy
+    </section>
+    <section>
+      <img src="images/" alt="">
+    </section>
+  </footer>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
