--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Import The Bootstrap Icons -->
+  <!-- Option 1: Include in HTML -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <!-- Import The CSS File -->
   <link rel="stylesheet" href="style.css">
 </head>
@@ -18,9 +21,9 @@
   <nav>
     <img src="images/logo.svg" alt="Logo">
     <section>
-      Features
-      Team
-      Sign In
+      <li>Features</li>
+      <li>Team</li>
+      <li>Sign In</li>  
     </section>
   </nav>
   <main>
@@ -30,78 +33,97 @@
         <p>
         Fylo stores your most important files in one secure location. 
         Access them wherever you need, share and collaborate with friends, 
-        family, and co-workers.
+        family,<br> and co-workers.
         </p>
-        <input type="email" placeholder="Enter your email">
-        <button>Get Started</button>
+        <div>
+          <input type="email" placeholder="Enter your email....">
+          <button type="submit">Get Started</button>
+        </div>
       </article>
-      <img src="images/illustration-1.svg" alt="">
+      <article>
+        <img src="images/illustration-1.svg" alt="" class="bg-img">
+      </article>
     </section>
-    <section>
+    <div class="curve"></div>
+    <section class="second">
       <article>
         <h1>Stay productive, wherever you are</h1>
         <p>
         Never let location be an issue when accessing your files. Fylo has you 
         covered for all of your file storage needs.
-      
+        </p>
+        <p>
         Securely share files and folders with friends, family and colleagues for 
         live collaboration. No email attachments required!
-      
-        <span>See how Fylo works</span>
         </p>
-        <article>
+        <div class="link">
+          <a href="">See how Fylo works <img src="images/icon-arrow.svg" alt=""></a> 
+        </div>
+        <article class="card">
           <img src="images/icon-quotes.svg" alt="">
           <p>
-          Fylo has improved our team productivity by an order of magnitude. Since 
-          making the switch our team has become a well-oiled collaboration machine.
+          Fylo has improved our team productivity by <br> an order of magnitude. Since 
+          making the <br> switch our team has become a well-oiled <br> collaboration machine.
           </p>
-          <section class="profile">
-          <img src="images/avatar-testimonial.jpg" alt=""><span> Kyle Burton </span><br> Founder & CEO, Huddle
-          </section>
+          <div class="profile">
+          <img src="images/avatar-testimonial.jpg" alt=""><header>Kyle Burton<p>Founder & CEO, Huddle</p></header>
+          </dive>
         </article>
       </article>
-      <img src="images/illustration-2.svg" alt="">
-    </section>
-    <section>
       <article>
+        <img src="images/illustration-2.svg" alt="" class="bg-img">
+      </article>
+    </section>
+    <section class="third">
+      <article class="half">
         <h1>Get early access today</h1>
         <p>
-        It only takes a minute to sign up and our free starter tier is extremely generous. 
-        If you have any questions, our support team would be happy to help you.
+        It only takes a minute to sign up and our free starter tier is <br> extremely generous. 
+        If you have any questions, our support team <br> would be happy to help you.
         </p>
       </article>
       <article>
-        <input type="email" placeholder="email@example.com">
-        <button>Get Started For Free</button>
+          <input type="email" placeholder="email@example.com">
+          <button type="submit">Get Started For Free</button>
       </article>
     </section>
   </main>
   <footer>
-    <img src="images/logo.svg" alt="">
+    <img src="images/logo-white.png" alt="" class="fylo">
+    <section class="footer">
     <section>
-      <img src="images/icon-phone.svg" alt="">Phone: +1-543-123-4567
-      <img src="images/icon-email.svg" alt="">example@fylo.com
+      <ul>
+        <li><img src="images/icon-phone.svg" alt=""> Phone: +1-543-123-4567</li>
+        <li><img src="images/icon-email.svg" alt=""> example@fylo.com</li>
+      </ul>
     </section>
     <section>
-      About Us
-      Jobs
-      Press
-      Blog
+      <ul>
+        <li>About Us</li>
+        <li>Jobs</li>
+        <li>Press</li>
+        <li>Blog</li>
+      </ul>
     </section>
     <section>
-      Contact Us
-      Terms
-      Privacy
+      <ul>
+        <li>Contact Us</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+      </ul>
     </section>
     <section>
-      <img src="images/" alt="">
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-twitter"></i>
+      <i class="bi bi-instagram"></i>
     </section>
-  </footer>
-  <footer>
+  </section>
+  <section>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/omarsaleh1" target="_blank">Omar</a>.
     </p>
+    </section>
   </footer>
 </body>
 </html>
