Finish The Mobile Version

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>
         Fylo stores your most important files in one secure location. 
         Access them wherever you need, share and collaborate with friends, 
-        family,<br> and co-workers.
+        family, and co-workers.
         </p>
         <div>
           <input type="email" placeholder="Enter your email....">
@@ -62,12 +62,12 @@
         <article class="card">
           <img src="images/icon-quotes.svg" alt="">
           <p>
-          Fylo has improved our team productivity by <br> an order of magnitude. Since 
-          making the <br> switch our team has become a well-oiled <br> collaboration machine.
+          Fylo has improved our team productivity by  an order of magnitude. Since 
+          making the switch our team has become a well-oiled collaboration machine.
           </p>
           <div class="profile">
           <img src="images/avatar-testimonial.jpg" alt=""><header>Kyle Burton<p>Founder & CEO, Huddle</p></header>
-          </dive>
+          </div>
         </article>
       </article>
       <article>
@@ -77,9 +77,9 @@
     <section class="third">
       <article class="half">
         <h1>Get early access today</h1>
-        <p>
-        It only takes a minute to sign up and our free starter tier is <br> extremely generous. 
-        If you have any questions, our support team <br> would be happy to help you.
+        <p>br
+        It only takes a minute to sign up and our free starter tier is extremely generous. 
+        If you have any questions, our support team would be happy to help you.
         </p>
       </article>
       <article>
@@ -112,7 +112,7 @@
         <li>Privacy</li>
       </ul>
     </section>
-    <section>
+    <section class="icons">
       <i class="bi bi-facebook"></i>
       <i class="bi bi-twitter"></i>
       <i class="bi bi-instagram"></i>
